Project/Observabality_Project/cloud-observability-app/kubertenes_config/app_config/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: observability-demo-app
  namespace: app

spec:
  replicas: 1

  selector:
    matchLabels:
      app: observability-demo-app

  template:
    metadata:
      labels:
        app: observability-demo-app

    spec:
      containers:
        - name: app
          image: 169976490560.dkr.ecr.us-east-1.amazonaws.com/observability:latest

          ports:
            - containerPort: 8000
