Project/Observabality_Project/cloud-observability-app/kubertenes_config/app_config/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: observability-demo-app
  namespace: app
  labels:
    app: observability-demo-app

spec:
  selector:
    app: observability-demo-app

  ports:
    - name: http
      port: 8000
      targetPort: 8000
